项目官网 & 文档

--- a/pangu-website/docs/安装.md
+++ b/pangu-website/docs/安装.md
@@ -25,7 +25,7 @@ import TabItem from '@theme/TabItem';
 <parent>
 	<groupId>com.gitee.pulanos.pangu</groupId>
 	<artifactId>pangu-parent</artifactId>
-	<version>latest.version.xxx</version>
+	<version>${最新稳定版本}</version>
 	<relativePath/>
 </parent>
 ```
@@ -35,14 +35,10 @@ import TabItem from '@theme/TabItem';
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-parent:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-parent:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
-
-:::tip
-请将版本号 `latest.version.xxx` 替换为当前最新版本号为，如：`5.1.0`。
-:::
 
 ## 基础模块	
 盘古启动、中心化配置、动态日志等基础能力自动装配模块。
@@ -61,7 +57,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-parent:latest.version.xxx'
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -83,7 +79,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-spring-boot-starter:latest.version
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-dubbo-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-dubbo-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -105,7 +101,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-dubbo-spring-boot-starter:latest.v
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-jdbc-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-jdbc-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -127,7 +123,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-jdbc-spring-boot-starter:latest.ve
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-seata-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-seata-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -149,7 +145,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-seata-spring-boot-starter:latest.v
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-data-governance-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-data-governance-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -171,7 +167,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-data-governance-spring-boot-starte
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-cache-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-cache-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -193,7 +189,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-cache-spring-boot-starter:latest.v
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-rabbitmq-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-rabbitmq-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -215,7 +211,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-rabbitmq-spring-boot-starter:lates
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-gateway-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-gateway-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -237,7 +233,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-gateway-spring-boot-starter:latest
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-web-spring-boot-starter:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-web-spring-boot-starter:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
@@ -259,7 +255,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-web-spring-boot-starter:latest.ver
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-generator-maven-plugin:latest.version.xxx'
+implementation 'com.gitee.pulanos.pangu:pangu-generator-maven-plugin:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
