完善 代码生成器插件 文档

--- a/pangu-website/docs/advanced-guide/代码生成器插件.md
+++ b/pangu-website/docs/advanced-guide/代码生成器插件.md
@@ -45,10 +45,8 @@ user | 数据库用户名
 password | 数据库密码
 tables | 目标数据库表，多个表用逗号分割
 author | 源代码文件的作者签名
-entityFilePath | 实体类文件输出路径
-entityPackageName | 实体类所在包
-mapperFilePath | Mapper 类文件输出路径
-mapperPackageName | Mapper 类所在包
+entityFilePath | 实体类文件输出路径（根据此路径推导包结构）
+mapperFilePath | Mapper 类文件输出路径（根据此路径推导包结构）
 
 :::tip 提示
 - 上表中输出路径参数可以是基于 ${project.basedir} 的相对路径，也可以是绝对路径。
