--- a/pangu-website/docs/quick-start/如何开发微服务.md
+++ b/pangu-website/docs/quick-start/如何开发微服务.md
@@ -39,7 +39,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="Dubbo模块">
+<TabItem value="dependency2" label="Dubbo 模块">
 
 ```jsx
 <dependency>
@@ -62,7 +62,7 @@ import TabItem from '@theme/TabItem';
 </Tabs>
 
 :::caution
-盘古框架微服务交互基于 Dubbo 提供的面向接口代理的高性能 RPC 调用能力。因此，对于内部服务模块之间的交互调用，不管是服务的提供者还是服务消费者，都需要依赖 API 服务接口包。当然，对于网关而言，使用的是泛化调用，也就是说当网关模块作为微服务消费者的时候是不需要依赖服务提供者的接口包的。
+盘古框架微服务交互基于 Dubbo 提供的面向接口代理的高性能 RPC 调用能力。对于内部服务模块之间的交互调用或者是传统方式的网关接口调用，都需要依赖 API 接口包。当然，对于ShenYu网关而言，使用的是泛化调用不需要依赖接口包，详见相关章节。
 :::
 
 ### 本地配置
