项目文档发布

--- a/pangu-website/docs/开发者社区.md
+++ b/pangu-website/docs/开发者社区.md
@@ -10,22 +10,16 @@ slug: /community
   <meta name="description" content="盘古开发框架是一套轻量稳健的工业级分布式微服务开发治理框架（兼容单体分层架构）" />
 </head>
 
-在使用盘古开发框架的过程中，如果你发现任何问题，有新的想法、建议都可以通过如下方式参与到开发者社区建设中或寻求更多帮助。
-
 ## Gitee Issues
- :100: &nbsp;[点我进入](https://gitee.com/pulanos/pangu-framework/issues?state=all) （推荐）
+:100: &nbsp; 任何关于盘古框架的问题、想法或建议都可以通过 [**issues**](https://gitee.com/pulanos/pangu-framework/issues?state=all) 提交。
 
-## 微信交流群
+## 联系方式
+
+ :envelope: &nbsp;18616786188@qq.com
+<!-- ## 微信交流群
 
 <img width="250"
   src={require('/resources/wx.jpeg').default}
   alt="普蓝开源社区微信群" />   
 
- :kiss: &nbsp;加我微信，可邀请你入群。
-
-## 作者Email
-
- :envelope: &nbsp;18616786188@qq.com
-
-## 下一步
-继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
+ :kiss: &nbsp;加我微信，可邀请你入群。 -->
