--- a/pangu-website/docs/致敬 & 鸣谢.md
+++ b/pangu-website/docs/致敬 & 鸣谢.md
@@ -38,6 +38,7 @@ slug: /thanks
 - [XXL Job](https://github.com/xuxueli/xxl-job)：A distributed task scheduling framework. It's core design goal is to develop quickly and learn simple, lightweight, and easy to expand.
 - [Lock4j](https://gitee.com/baomidou/lock4j)：Lock4j is a distributed lock component.
 - [Hutool](https://hutool.cn/docs)：A set of tools that keep Java sweet.
+- [TLog](https://tlog.yomahub.com/en/docs/)：TLog is a lightweight distributed log tagging tracker.
 
 :::caution
 上述列表排名不分先后，且不保证盘古框架依赖资源列表的完整性。
