--- a/pangu-website/docs/devops/部署相关.md
+++ b/pangu-website/docs/devops/部署相关.md
@@ -1,14 +1,19 @@
 ---
-title: 部署运维指南
+title: 部署相关
 tags: [盘古简介,盘古架构,部署运维]
-sidebar_position: 15
-slug: /deploy-guide
+sidebar_position: 1
+slug: /deploy-guide/basic
 ---
 <head>
   <title>盘古开发框架 | 部署运维指南</title>
   <meta name="keywords" content="盘古开发框架 | 部署运维指南" />
   <meta name="description" content="盘古开发框架是一套轻量稳健的工业级分布式微服务开发治理框架（兼容单体分层架构）" />
 </head>
+
+## 打包脚本
+```
+mvn clean package
+```
 
 ## 启动脚本
 部署流程和方法工具众多，大家可自由发挥。这里仅给出最基础的启动脚本供参考。
@@ -22,7 +27,6 @@ nohup java -jar -Dactive=test xxxxx.jar &
 
 - Nacos地址(配置中心、注册中心)：`-Dnacos.server-addr=127.0.0.1:8888`
 - Nacos命名空间(配置中心、注册中心)：`-Dnacos.namespace=pangu-test`
-- ShenYu网关数据同步地址：`-Dshenyu.server-lists=http://127.0.0.1:9999`
 - ...
 
 #### 其它JVM优化参数、日志参数
@@ -30,14 +34,6 @@ nohup java -jar -Dactive=test xxxxx.jar &
 
 ## 参考部署架构
 Coming soon...
-
-## 日志级别热切换
-为了增强日志输出的可观测性，盘古基础模块实现了基于配置中心的日志级别热切换能力。只需要在配置中心修改或新增日志级别配置，则对应的日志输出级别即刻实时生效。
-```jsx
-#日志
-logging.level.root=INFO
-logging.level.com.gitee.pulanos.pangu=INFO
-```
 
 ## 下一步
 继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
