用户分配角色相关代码

--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -171,7 +171,11 @@ public void aSelect() {
 	//方式5
 	QueryWrapper queryWrapper = Wrappers.query();
 	queryWrapper.select("id").ge("age", 10).orderByDesc("age");
-	List<Long> ids = (List<Long>)userMapper.selectObjs(queryWrapper);
+	List<Long> ids = (List)userMapper.selectObjs(queryWrapper);
+	//或
+	LambdaQueryWrapper<UserRoleEntity> lambdaQueryWrapper = Wrappers.lambdaQuery();
+	lambdaQueryWrapper.select(UserRoleEntity::getRoleId).eq(UserRoleEntity::getUserId, userId);
+	roleIds = (List)userRoleMapper.selectObjs(lambdaQueryWrapper);
 
 	//方式6
 	List<Map<String, Object>> userMaps = userMapper.selectMaps(Wrappers.<UserEntity>lambdaQuery().eq(UserEntity::getUserType, "1"));
