重构分页逻辑

--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -283,6 +283,7 @@ public interface CrudMapper {
 ```
 
 ```jsx title="src/main/resources/mapper/CrudMapper.xml"
+<mapper namespace="com.gitee.pulanos.pangu.showcases.crud.dao.mapper.CrudMapper">
 <!-- 分页查询 -->
 <select id="listUsersByPage" resultType="com.gitee.pulanos.pangu.showcases.crud.dao.entity.UserEntity">
 	select id,name,age,user_type,gmt_create,gmt_update from user
@@ -315,6 +316,7 @@ public interface CrudMapper {
 		</if>
 	</where>
 </select>
+</mapper>
 ```
 
 ## 高级特性
