用户授权代码

--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -180,13 +180,18 @@ public void aSelect() {
 	//方式6
 	List<Map<String, Object>> userMaps = userMapper.selectMaps(Wrappers.<UserEntity>lambdaQuery().eq(UserEntity::getUserType, "1"));
 
-	//方式7 count
+	//方式7 count 查询
 	Long cnt = userMapper.selectCount(Wrappers.<UserEntity>lambdaQuery().le(UserEntity::getGmtCreate, DateUtil.date()));
 
-	//方式8 group
+	//方式8 group 查询
 	QueryWrapper<UserEntity> queryWrapper1 = Wrappers.query();
 	queryWrapper1.select("age, count(id) as cnt").groupBy("age");
 	List<Map<String, Object>> mapList = userMapper.selectMaps(queryWrapper1);
+	
+	//方式9 or 查询
+	if (ObjectUtil.isNotEmpty(keyword)){
+		lambdaQueryWrapper.and(w -> w.like( UserEntity::getName, keyword).or().like(UserEntity::getUserName, keyword));
+	}
 }
 ```
 
