实现权限系统的角色授权操作前后端功能（角色-资源绑定）

--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -134,6 +134,7 @@ userMapper.deleteBatchIds(Arrays.asList(1000L, 1001L));
 
 //方式3
 userMapper.delete(Wrappers.<UserEntity>lambdaQuery().ge(UserEntity::getAge, 150));
+userMapper.delete(Wrappers.lambdaQuery(UserEntity.class).ge(UserEntity::getAge, 150));
 
 //方式4
 userMapper.deleteById(new UserEntity().setId(2000L));
