调整状态码数据类型  int->String

--- a/pangu-website/docs/quick-start/如何开发微服务.md
+++ b/pangu-website/docs/quick-start/如何开发微服务.md
@@ -84,9 +84,11 @@ spring.application.name=pangu-examples-dubbo-service
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 dubbo.consumer.timeout=5000
-#服务注册中心地址
+# 服务注册中心地址
 dubbo.registry.address=nacos://${nacos.server-addr}?namespace=${nacos.namespace}
 dubbo.consumer.check=false
+# 禁用 Dubbo 缺省的异常过滤器，盘古框架中启用了修改过的异常过滤器以支持直接抛出自定义的业务异常。
+dubbo.provider.filter=-exception
 
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
