升级项目官网和文档中心

--- a/pangu-website/docs/advanced-guide/分布式事务.md
+++ b/pangu-website/docs/advanced-guide/分布式事务.md
@@ -326,7 +326,7 @@ Seata Server （事务协调者 TC ）的通讯地址。
 <Tabs>
 <TabItem value="main-impl" label="购买商品业务代码">
 
-```jsx {12}
+```jsx
 @Component
 public class MainBizService {
 
