--- a/pangu-website/docs/advanced-guide/分布式多级缓存.md
+++ b/pangu-website/docs/advanced-guide/分布式多级缓存.md
@@ -192,7 +192,7 @@ public void delAllUsers() {
 ## 启动入口
 需要 `@EnableLayeringCache` 注解的加持。如下代码所示。
 
-```jsx {1}
+```jsx
 @EnableLayeringCache
 @SpringBootApplication
 public class LayeringCachePanguApplication {
