--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -239,7 +239,7 @@ public PageResult<RoleEntity> list(RoleIn roleIn) {
 一般来说在日常开发中我们是不需要再编写SQL代码的，Mapper API已经能满足我们的需求了。但对于一些特殊需求，我们也可以手工写SQL映射的方式来处理。如下范例演示了手工SQL查询的操作，新增、修改、删除也是同理。
 :::
 
-```jsx {6,15}
+```jsx
 public void bPageQuery(){
 	log.info("自定义SQL映射分页查询数据...");
 	Page page = new Page<UserEntity>(1,3);
