--- a/pangu-website/docs/advanced-guide/消息队列.md
+++ b/pangu-website/docs/advanced-guide/消息队列.md
@@ -179,7 +179,7 @@ spring.profiles.active=${spring.profiles.active:dev}
 </TabItem>
 <TabItem value="application-dev-2" label="application-dev.properties">
 
-```jsx {9}
+```jsx
 spring.application.name=pangu-examples-mq-rabbitmq-receiver
 
 spring.rabbitmq.host=jzaep3orxb2b.public.tencenttdmq.com
