--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -147,7 +147,7 @@ nacos.config.data-id=${spring.application.name}
 
 ### 启动入口
 
-```jsx {4}
+```jsx
 @SpringBootApplication
 public class NacosConfigurationApplication {
 	public static void main(String[] args) {
