--- a/pangu-website/docs/quick-start/如何开发单体应用.md
+++ b/pangu-website/docs/quick-start/如何开发单体应用.md
@@ -65,7 +65,7 @@ logging.level.com.gitee.pulanos.pangu=INFO
 ```
 
 ## 启动入口
-```jsx {4}
+```jsx
 @SpringBootApplication
 public class EmptyWebPanguApplication {
 	public static void main(String[] args) {
