--- a/pangu-website/docs/quick-start/如何开发微服务.md
+++ b/pangu-website/docs/quick-start/如何开发微服务.md
@@ -78,7 +78,7 @@ spring.profiles.active=${spring.profiles.active:dev}
 </TabItem>
 <TabItem value="application-dev" label="application-dev.properties">
 
-```jsx {7}
+```jsx
 spring.application.name=pangu-examples-dubbo-service
 
 dubbo.protocol.name=dubbo
@@ -102,7 +102,7 @@ logging.level.com.gitee.pulanos.pangu=INFO
 UserEntity findUserEntity(Long id);
 ```
 
-```jsx {1} title="实现接口 UserServiceImpl.java"
+```jsx title="实现接口 UserServiceImpl.java"
 @Service(version = "1.0.0", group = "pangu-showcases-dubbo-service")
 public class UserServiceImpl implements UserService {
 	@Override
@@ -118,7 +118,7 @@ public class UserServiceImpl implements UserService {
 
 ### 启动入口
 
-```jsx {1,5}
+```jsx
 @EnableDubbo
 @SpringBootApplication
 public class DubboProviderApplication {
@@ -142,7 +142,7 @@ public class DubboProviderApplication {
 ## 服务消费者
 上述服务注册到 Nacos 服务中心以后就可以对外提供服务了。可以在任何一个 SpringBean 组件中（一般是 Service、Manager 等），引入服务接口后就像本地接口调用一样调用远程服务。Dubbo 将提供高性能的基于代理的远程调用能力，服务以接口为粒度，为开发者屏蔽远程调用底层细节。服务消费端所需要的依赖和提供端是一样的，这里不再赘述。仅给出消费相关代码。如下所示。
 
-```jsx {3,8} title="服务消费端，调用远程服务代码 UserAdminManager.java"
+```jsx title="服务消费端，调用远程服务代码 UserAdminManager.java"
 @Component
 public class UserAdminManager {
 	@Reference(version = "1.0.0", group = "pangu-examples-dubbo-service")
