--- a/pangu-website/docs/quick-start/如何开发单体应用.md
+++ b/pangu-website/docs/quick-start/如何开发单体应用.md
@@ -52,6 +52,10 @@ import TabItem from '@theme/TabItem';
 </TabItem>
 </Tabs>
 
+:::caution 说明
+这里仅演示了最简模块组合。如果需要数据持久化、消息队列等功能，请根据开发指南相关章节继续安装相关模块依赖即可。
+:::
+
 ## 本地配置
 
 > 为便于理解，本文基于本地配置的方式编写。若改为标准的 Nacos 配置中心模式，请参阅：[配置中心](/docs/advanced-guide/nacos-config-center) 章节。
