--- a/pangu-website/docs/quick-start/microservice/开发微服务.md
+++ b/pangu-website/docs/quick-start/microservice/开发微服务.md
@@ -1,5 +1,5 @@
 ---
-title: 如何开发微服务
+title: 开发微服务
 tags: [快速开始,Nacos,服务注册,服务发现,服务治理]
 sidebar_position: 20
 slug: /quick-start/how-to-make-microservice-architecture-app
