--- a/pangu-website/docs/安装.md
+++ b/pangu-website/docs/安装.md
@@ -5,7 +5,7 @@ sidebar_position: 2
 slug: /install
 ---
 <head>
-  <title>盘古开发框架 | 安装 | 依赖管理模块 | 基础模块 | Dubbo模块 | JDBC模块 | 分布式事务管理模块 | 数据治理模块 | 缓存模块 | 消息队列模块 | 网关模块 | Web模块 | 代码生成插件</title>
+  <title>盘古开发框架安装</title>
   <meta name="keywords" content="盘古开发框架 | 安装 | 依赖管理模块 | 基础模块 | Dubbo模块 | JDBC模块 | 分布式事务管理模块 | 数据治理模块 | 缓存模块 | 消息队列模块 | 网关模块 | Web模块 | 代码生成插件" />
   <meta name="description" content="盘古开发框架是一套轻量稳健的工业级分布式微服务开发治理框架（兼容单体分层架构）" />
 </head>
