--- a/pangu-website/faq/常见问答.md
+++ b/pangu-website/faq/常见问答.md
@@ -13,13 +13,16 @@ slug: /faq1
 #### 1. 盘古开发框架的开源协议是啥？创始初衷和目标愿景是什么？  
 「盘古开发框架」基于商业友好的 [Apache-2.0](https://www.apache.org/licenses/LICENSE-2.0) 协议**开源**发布，且是**免费**的，创始初衷是「分享经验-传递价值-成就你我」。目标愿景是「共建共享开源生态」，不仅做开源生态的受益者也希望成为开源生态的贡献者。
 
-#### 2. 盘古开发框架可以做单体开发吗?
+#### 2. 盘古开发框架后续版本会区分社区开源版和商业定制版吗？
+不会。我们将一如既往的秉承共建共享免费开源生态的初衷，将开源免费进行到底，任何时候都不会将其进行商业化包装，大家可以放心使用。其实，和大家一样，作者也是盘古开发框架的忠实用户，也基于它开发商业项目。所以，盘古开发框架只是一个基础的技术框架，期待着和大家一起共建共享之。
+
+#### 3. 盘古开发框架可以做单体开发吗?
 可以。从纯技术角度看，盘古开发的最佳姿势是 [分布式微服务开发](/docs/quick-start/how-to-make-microservice-architecture-app)，但也支持搭建 [垂直单体分层架构的开发模式](/docs/quick-start/how-to-make-monomer-architecture-app)。
 
-#### 3. 盘古开发框架和 [Spring Cloud](https://spring.io/projects/spring-cloud) 或 [Spring Cloud Alibaba](https://spring.io/projects/spring-cloud-alibaba) 是什么关系？ 
+#### 4. 盘古开发框架和 [Spring Cloud](https://spring.io/projects/spring-cloud) 或 [Spring Cloud Alibaba](https://spring.io/projects/spring-cloud-alibaba) 是什么关系？ 
 没有直接关系。「盘古开发框架」直接基于阿里的 Nacos、Seata、Sentinel 和 Apache 的 Dubbo、ShardingSphere 等分布式中间件输出微服务架构的能力。是一套完全独立于 Spring Cloud 生态的轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架。相较于 SC 和 SCA 而言，简单、纯洁、不被污染和绑架、易扩展好维护是其显著特点。
 
-#### 4. 盘古开发框架可以开发前端吗？有没有现成的『通用权限管理系统』？
+#### 5. 盘古开发框架可以开发前端吗？有没有现成的『通用权限管理系统』？
 可以。盘古前端基于 SUCI 开发。SCUI 是一个中后台前端解决方案，基于 VUE3 和 ElementPlus 实现。更多 SCUI 信息，请直接参考其 [项目主页和相关文档](https://lolicode.gitee.io/scui-doc/guide/)。同时，我们基于 SCUI 和盘古开发框架后端能力提供了一套轻量成熟的 [权限系统参考实现](/online-demo)。大家可以基于此快速进行业务系统的二次开发。
 
 ## 下一步
