--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -5,7 +5,7 @@ sidebar_position: 5
 slug: /advanced-guide/data-persistance
 ---
 <head>
-  <title>盘古开发框架 | 数据持久化 | MyBatis Plus</title>
+  <title>盘古开发框架 | 数据持久化 | 自动填充字段 | 逻辑删除 | 乐观锁 | MyBatis Plus</title>
   <meta name="keywords" content="盘古开发框架 | 数据持久化 | 自动填充字段 | 逻辑删除 | 乐观锁 | MyBatis Plus" />
 </head>
 
