--- a/pangu-website/docs/advanced-guide/数据治理之读写分离.md
+++ b/pangu-website/docs/advanced-guide/数据治理之读写分离.md
@@ -29,10 +29,10 @@ import TabItem from '@theme/TabItem';
 ### 读写分离后面临的问题
 对于一般的简单理解，读写分离就是 DQL 请求走从库，DML 请求走主库。但对于开发人员而言，在实际开发中还需要考虑如下问题。
 - **主从数据同步延迟问题**  
-因为我们主从同步是异步复制的，不可避免的会有延迟。因此有可能出现 mastre 节点已经写入，但是从 slave 节点读取不到数据的问题。解决方法见后续章节：[读操作强制走主库](#读操作强制走主库) 和 [事务方法里的所有读写操作都自动走主库](#事务方法里的所有读写操作都自动走主库)。
+因为我们主从同步是异步复制的，不可避免的会有延迟。因此有可能出现 mastre 节点已经写入，但是从 slave 节点读取不到数据的问题。解决方法见后续测试用例章节：读操作强制走主库和事务方法里的所有读写操作都自动走主库。
 
 - **事务问题** 
-如果一个事务方法里既包含有 DML 请求也有 DQL 请求，如果读请求走从库写请求走主库的话，则势必会带来分布式事务的问题。但对于大部分读写分离场景而言，很显然我们并不希望为了读写分离而去处理分布式事务的问题。因此对于读写分离，恰当的做法是将事务方法中的所有 SQL 请求统一都走主库，将跨库的分布式事务转为本地事务来处理。见后续章节：[事务方法里的所有读写操作都自动走主库](#事务方法里的所有读写操作都自动走主库)。（如果对于分布式场景下的分布式事务问题的处理感兴趣，可以参考：[盘古框架分布式事务最佳实践](/docs/advanced-guide/distributed-transaction)）
+如果一个事务方法里既包含有 DML 请求也有 DQL 请求，如果读请求走从库写请求走主库的话，则势必会带来分布式事务的问题。但对于大部分读写分离场景而言，很显然我们并不希望为了读写分离而去处理分布式事务的问题。因此对于读写分离，恰当的做法是将事务方法中的所有 SQL 请求统一都走主库，将跨库的分布式事务转为本地事务来处理。见后续测试用例章节：事务方法里的所有读写操作都自动走主库。（如果对于分布式场景下的分布式事务问题的处理感兴趣，可以参考：[盘古框架分布式事务最佳实践](/docs/advanced-guide/distributed-transaction)）
 
 ### 相关专业术语
 
