--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -12,7 +12,7 @@ slug: /advanced-guide/data-persistance
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-盘古开发数据持久化 API 依赖 MyBatis Plus 提供。在 MyBatis 的基础上提供了强大的内置通用 Mapper CRUD 操作、支持 Lambda 表达式、内置屏蔽不通数据库方言差异的分页插件、自动填充字段值、多种主键自动生成策略、逻辑删除、乐观锁插件等。
+盘古开发框架数据持久化 API 依赖 MyBatis Plus 提供。在 MyBatis 的基础上提供了强大的内置通用 Mapper CRUD 操作、支持 Lambda 表达式、内置屏蔽不通数据库方言差异的分页插件、自动填充字段值、多种主键自动生成策略、逻辑删除、乐观锁插件等。
 
 <details>
   <summary><b>快速 QA：</b>可以支持兼容哪些数据库类型？</summary>
