--- a/pangu-website/docs/advanced-guide/注册中心.md
+++ b/pangu-website/docs/advanced-guide/注册中心.md
@@ -29,7 +29,7 @@ slug: /advanced-guide/nacos-regist-center
 ![盘古开发框架注册中心图示](/resources/doc/8-pangu-framework-nacos.png)
 
 ## 注册中心实战
-请参与本指南的 [快速开始->如何开发微服务](/docs/quick-start/how-to-make-microservice-architecture-app) 章节，那里已经详细完整的讲解了服务注册&服务发现的相关内容。
+请参考本指南的 [快速开始->如何开发微服务](/docs/quick-start/how-to-make-microservice-architecture-app) 章节，那里已经详细完整的讲解了服务注册&服务发现的相关内容。
 
 ## 下一步
 继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/community) 寻求更多帮助。
