--- a/pangu-website/admin/advanced-guide/新增业务功能模块.md
+++ b/pangu-website/admin/advanced-guide/新增业务功能模块.md
@@ -1,8 +1,8 @@
 ---
 title: 新增业务功能模块
 tags: [盘古 Admin]
-sidebar_position: 5
-slug: /pangu-admin/new-module
+sidebar_position: 1
+slug: /new-module
 ---
 
 <head>
@@ -25,7 +25,7 @@ export const Highlight = ({children, color}) => (
 
 本文将介绍如何基于盘古 Admin 实现一个自己的业务功能模块。
 
-## 虚拟业务
+## 虚拟业务场景
 
 假设我们要实现的是一个某银行信用卡申请审批后台系统。在此，我们演示如何新增一个【信用卡人工复核】 菜单，列出各种渠道提交到后台的卡申请信息供审核人员审核确认。
 
@@ -43,6 +43,10 @@ export const Highlight = ({children, color}) => (
 
 ## 第三步 网关集成
 在网关模块 pangu-admin-web 的 pom.xml 中添加对接口模块 icbc-card-audit-api 的依赖。并通过 RestController 调用相关 api 接口。 
+
+:::tip 提示
+本文以缺省的微服务开发模式开发后端服务。如果您选择单体开发，则可参考 [服务开发](/docs/intro) 相关文档。
+:::
 
 ## 第四步 新建前端模块
 ```yaml
