新增 盘古 Admin 开发文档

--- a/pangu-website/admin/quick-start/搭建前端开发环境.md
+++ b/pangu-website/admin/quick-start/搭建前端开发环境.md
@@ -25,7 +25,7 @@ import TabItem from '@theme/TabItem';
 安装依赖和启动需依赖npm。安装方法：[https://nodejs.org/zh-cn](https://nodejs.org/zh-cn/)
 :::
 
-```jsx
+```shell
 # 进入项目目录
 cd pangu-framework/pangu-admin/pangu-admin-frontend
 # 安装依赖
@@ -33,7 +33,7 @@ npm i
 # 启动项目 (开发模式)
 npm run serve
 # 构建部署（生产模式）：将根目录生成 dist 文件夹发布到服务器即可
-# npm run build
+npm run build
 ```
 编译启动成功后可通过控制台提示信息开始访问。如：http://localhost:2800
 
