--- a/pangu-website/admin/quick-start/搭建前端开发环境.md
+++ b/pangu-website/admin/quick-start/搭建前端开发环境.md
@@ -21,9 +21,8 @@ import TabItem from '@theme/TabItem';
 前端 IDE 可以自由选择，推荐 vscode。
 
 ### 安装 & 启动
-:::tip 提示
-安装依赖和启动需依赖npm。安装方法：[https://nodejs.org/zh-cn](https://nodejs.org/zh-cn/)
-:::
+
+> 安装依赖和启动需依赖npm。安装方法：[https://nodejs.org/zh-cn](https://nodejs.org/zh-cn/)
 
 ```shell
 # 进入项目目录
