--- a/pangu-website/admin/日常开发常见问答.md
+++ b/pangu-website/admin/日常开发常见问答.md
@@ -1,9 +1,9 @@
 ---
-title: Admin 开发常见问答
+title: 日常开发常见问答
 tags: [FAQ]
 hide_table_of_contents: true
 sidebar_position: 10
-slug: /faq-admin
+slug: /faq
 ---
 <head>
   <title>常见问答 | 盘古 Admin</title>
