--- a/pangu-website/app/日常开发常见问答.md
+++ b/pangu-website/app/日常开发常见问答.md
@@ -6,13 +6,16 @@ sidebar_position: 10
 slug: /faq
 ---
 <head>
-  <title>常见问答 | 盘古 Admin</title>
+  <title>常见问答 | 盘古 APP Starter</title>
 </head>
 
-> 本文将重点关注 Admin 前端开发问题的收集汇总。后端开发相关问题请查阅 [服务开发常见问答](/docs/faq-service)
+> 本文将重点关注 APP 前端开发问题的收集汇总。后端开发相关问题请查阅 [服务开发常见问答](/docs/faq-service)
 
-#### 1. 可以将盘古 Admin 的后端改为单体应用吗？ 
-必须可以。只需要将 pangu-admin-web 网关模块和 pangu-admin-system 权限模块做一些简单的合并即可。合并后就能将跨进程的 RPC 服务调用转变为 jvm 进程内本地服务调用。如果连配置中心都不想搭建的话，可以将配置直接改为本地配置文件。如此，就能使用传统的单体开发模式，将业务系统代码作为子包模块写入合并后的工程即可。
+#### 1. 为什么关于 APP 开发的文档比较少？
+盘古 APP Starter 集成了 uni-app 和 uView UI，绑定使用 HbuilderX 作为开发 IDE。因此，关于组件使用规范细节、IDE 开发流程操作等问题可以参考如下文档即可。
+- [uni-app 文档](https://uniapp.dcloud.net.cn)
+- [uView UI 文档](https://www.uviewui.com/components/intro.html)
+- [HbuilderX 文档](https://hx.dcloud.net.cn)
 
 ## 下一步
 继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/community) 寻求更多帮助。
