更新开发文档

--- a/pangu-website/admin/简介.md
+++ b/pangu-website/admin/简介.md
@@ -13,7 +13,7 @@ slug: /intro
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-**盘古 Admin** 是一套基于 **SCUI**(Vue3、Element-Plus) + **盘古开发框架**的中后台业务系统前后端统一解决方案。并预置了轻量成熟的 [权限系统参考实现](https://pangu-admin.pulanit.com)，用户可以基于此快速搭建中后台业务系统二次开发脚手架。
+**盘古 Admin** 是一套基于 **SCUI**(Vue3、Element-Plus) + **盘古服务开发框架**的中后台业务系统前后端统一解决方案。并预置了轻量成熟的 [权限系统参考实现](https://pangu-admin.pulanit.com)，用户可以基于此快速搭建中后台业务系统二次开发脚手架。
 
 ## 前端方案介绍
 盘古 Admin 前端基于 SUCI 开发。SCUI 是一个中后台前端解决方案，基于 VUE3 和 ElementPlus 实现。 使用最新的前端技术栈，提供各类实用的组件方便在业务开发时的调用，并且持续性的提供丰富的业务模板帮助你快速搭建企业级中后台前端任务。更多 SCUI 信息，请直接参考其 项目主页和相关文档。
