--- a/pangu-website/docs/安装.md
+++ b/pangu-website/docs/安装.md
@@ -12,7 +12,7 @@ slug: /install
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-盘古开发框架已经发布到 Maven 中央仓库，直接使用如下方法安装使用即可。
+盘古服务开发框架已经发布到 Maven 中央仓库，直接使用如下方法安装使用即可。
 
 ## 依赖管理模块
 盘古资源依赖声明管理模块。所有盘古引用都应该依赖这个模块。
