--- a/pangu-website/docs/日常开发常见问答.md
+++ b/pangu-website/docs/日常开发常见问答.md
@@ -12,5 +12,8 @@ slug: /faq-service
 #### 1. 盘古服务开发框架和 [Spring Cloud](https://spring.io/projects/spring-cloud) 或 [Spring Cloud Alibaba](https://spring.io/projects/spring-cloud-alibaba) 是什么关系？ 
 没有直接关系。「盘古开发框架」直接基于阿里的 Nacos、Seata、Sentinel 和 Apache 的 Dubbo、ShardingSphere 等分布式中间件输出微服务架构的能力。是一套完全独立于 Spring Cloud 生态的轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架。相较于 SC 和 SCA 而言，简单、纯洁、不被污染和绑架、易扩展好维护是其显著特点。
 
+#### 2. 盘古服务开发框架可以做单体开发吗?
+可以。从纯技术角度看，盘古服务开发的最佳姿势是 [分布式微服务开发](/docs/quick-start/how-to-make-microservice-architecture-app)，但也支持搭建 [垂直单体分层架构的开发模式](/docs/quick-start/how-to-make-monomer-architecture-app)。
+
 ## 下一步
 继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/community) 寻求更多帮助。
