--- a/pangu-website/admin/简介.md
+++ b/pangu-website/admin/简介.md
@@ -19,7 +19,12 @@ import TabItem from '@theme/TabItem';
 盘古 Admin 前端基于 SUCI 开发。SCUI 是一个中后台前端解决方案，基于 VUE3 和 ElementPlus 实现。 使用最新的前端技术栈，提供各类实用的组件方便在业务开发时的调用，并且持续性的提供丰富的业务模板帮助你快速搭建企业级中后台前端任务。更多 SCUI 信息，请直接参考其 项目主页和相关文档。
 
 ## 后端方案介绍
-盘古 Admin 后端基于盘古服务开发框架。详情请查看 [相关文档](/docs/intro)。
+盘古 Admin 后端基于盘古微服务开发框架。详情请查看 [相关文档](/docs/intro)。
+
+## 常见 FAQ
+
+#### 1. 为什么盘古 Admin 的功能和其它 XX Admin 相比功能比较少？
+盘古 Admin 后台仅预置了布局配置、个人信息设置、角色管理、部门管理、人员管理、资源管理共 6 个功能模块。这是满足一个后台和 RBAC 权限系统的最小集。也是微服务架构背景下 Admin 后台应该有的样子。一些单体开发下的数据字典、监控、日志、缓存操作、在线用户等等各种模块，在盘古微服务架构背景下，这些功能要么已经形如鸡肋不合时宜了；要么有专业的工具或组件去管理。所以，这里给的是一个精简纯洁的的最小版，希望二次开发的时候做简单的加法而不是加减混合运算。
 
 ## Admin 权限系统截屏
 如下为权限系统参考实现的部分截屏。完整体验请访问：[在线演示系统](https://pangu-admin.pulanit.com)。
