--- a/pangu-website/docs/devops/日志相关.md
+++ b/pangu-website/docs/devops/日志相关.md
@@ -44,7 +44,9 @@ tlogTraceId: 10812814178142336
 > - pangu-examples-webapi-dubbo-service-based
 
 ## 日志级别热切换
-为了增强日志输出的可观测性，盘古基础模块实现了基于配置中心的日志级别热切换能力。只需要在配置中心修改或新增日志级别配置，则对应的日志输出级别即刻实时生效。
+
+为了增强日志输出的可观测性，盘古基础模块实现了基于配置中心的日志级别热切换能力。只需要在配置中心修改或新增日志级别配置，则对应的日志输出级别即刻实时生效。默认状态下此功能是关闭的。需要先在工程配置文件中使用此配置打开此功能：`pangu.log-reload=true`。
+
 ```jsx
 #配置中心配置日志
 logging.level.root=INFO
@@ -52,4 +54,5 @@ logging.level.com.gitee.pulanos.pangu=INFO
 ```
 
 ## 下一步
+
 继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/community) 寻求更多帮助。
