删除无意义的模块封装。

--- a/pangu-website/docs/advanced-guide/分布式事务.md
+++ b/pangu-website/docs/advanced-guide/分布式事务.md
@@ -278,7 +278,7 @@ INSERT INTO `stock` (`id`, `commodity_code`, `count`) VALUES (1, 'C001', 100);
 <TabItem value="application" label="application.properties">
 
 ```jsx
-spring.profiles.active=${spring.profiles.active:dev}
+spring.profiles.active=${spring.active:dev}
 ```
 </TabItem>
 <TabItem value="application-dev" label="application-dev.properties">
