--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -94,7 +94,7 @@ Nacos 的客户端 SDK 会在本地生成配置的快照。当客户端无法连
 
 ```jsx
 spring.application.name=pangu-examples-config-remote-nacos
-spring.profiles.active=${spring.profiles.active:dev}
+spring.profiles.active=${spring.active:dev}
 nacos.config.bootstrap.enable=true
 nacos.config.bootstrap.log-enable=true
 nacos.config.auto-refresh=true
