--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -56,7 +56,7 @@ import TabItem from '@theme/TabItem';
 <TabItem value="application" label="application.properties">
 
 ```jsx
-spring.profiles.active=${spring.profiles.active:dev}
+spring.profiles.active=${spring.active:dev}
 ```
 </TabItem>
 <TabItem value="application-dev" label="application-dev.properties">
