--- a/pangu-website/docs/advanced-guide/消息队列.md
+++ b/pangu-website/docs/advanced-guide/消息队列.md
@@ -108,7 +108,7 @@ import TabItem from '@theme/TabItem';
 <TabItem value="application" label="application.properties">
 
 ```jsx
-spring.profiles.active=${spring.profiles.active:dev}
+spring.profiles.active=${spring.active:dev}
 ```
 </TabItem>
 <TabItem value="application-dev" label="application-dev.properties">
@@ -173,7 +173,7 @@ public class SendService {
 <TabItem value="application-2" label="application.properties">
 
 ```jsx
-spring.profiles.active=${spring.profiles.active:dev}
+spring.profiles.active=${spring.active:dev}
 ```
 </TabItem>
 <TabItem value="application-dev-2" label="application-dev.properties">
