- [pangu app starter] 整个 uni-app 和uview ui 提供移动端快速开发脚手架。 - [pangu app starter] 发布 pagu app starter 的 H5 版本、微信小程序版本、Android 原生版本的示例程序。 - [pangu] 解决 nacos 依赖版本升级后，ConfigParseUtils API 不向下兼容导致的 bug（出参类型结构变了）。 - [pangu] 升级 hutool 版本，解决 xml 序列化远程代码执行漏洞。 - [pangu] 增加配置项：pangu.log-reload 根据Nacos配置实现动态热刷新日志级别（缺省：true）。 - [pangu] 升级 SpringBoot 依赖 到最新版本 2.7.17。 - [pangu] 优化日志级别远程热加载功能。 - [pangu] 升级 nacos 到2.2.4，并完成兼容性适配调整。 - [pangu] 升级 dubbo 到3.2.9, 并完成 triple 协议切换和双向流式推送功能样例。 - [pangu] 变更 dubbo 调用自定义异常类返回方式。由 hack ExceptionFilter 改为接口方法声明自定义异常或者抛出 RcpException。 - [pangu] 调整了自定义 Starter 的自动装配逻辑。删除了原 pangu-xx-spring-boot-starter，合并为 pangu-spring-boot-starter。 - [pangu] 调整了框架封装指导思想，删除了大量无意义或通用性不高或扩展性不强的封装动作。使得框架更加透明与灵活。

--- a/pangu-website/docs/日常开发常见问答.md
+++ b/pangu-website/docs/日常开发常见问答.md
@@ -19,7 +19,7 @@ slug: /faq-service
 
 #### 3. 如何在 Dubbo 服务 Provider 端抛出自定义异常？
 
-在接口方法中加入自定义异常签名即可。
+在接口方法中加入自定义异常签名即可。这样 Consumer 端才能获取原始的异常类型。否则会被序列化为字符串抛出。（Java 自带异常或者 Dubbo 自带的 RpcException 不需要在接口方法上声明就能被捕获。实现原理参见 Dubbo 的 ExceptionFilter 类）。
 
 ````jsx
 void update(ResourceEntity resourceEntity) throws BizException;
